tooling/nargo_cli/tests/snapshots/execution_success/regression_8011/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
unconstrained fn main() -> pub u32 {
    let s1: u32 = loop_with_negative_literal();
    let s2: u32 = loop_with_u128_literal();
    assert(s1 == s2);
    s1
}

fn loop_with_negative_literal() -> u32 {
    let s: i64 = -5_i64;
    let e: i64 = 10_i64;
    let mut sum: u32 = 0_u32;
    for _ in s..e {
        sum = sum + 1_u32;
    }
    sum
}

fn loop_with_u128_literal() -> u32 {
    let s: u128 = 170141183460469231731687303715884105715_u128;
    let e: u128 = 170141183460469231731687303715884105730_u128;
    let mut sum: u32 = 0_u32;
    for _ in s..e {
        sum = sum + 1_u32;
    }
    sum
}
